--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     </head>
     <body>
 
-        <h1>We are collborating!!!</h1>
+        <div class="slider">
+            <div class="slide active">
+              <div class="bg"></div>
+            </div>
+            <div class="slide queue">
+              <div class="bg"></div>
+            </div>
+            <div class="slide queue">
+              <div class="bg"></div>
+            </div>
+            <div class="slide queue">
+              <div class="bg"></div>
+            </div>
+          </div>
         
     </body>
 </html>
